--- a/app/views/admin/courses/new.html.erb
+++ b/app/views/admin/courses/new.html.erb
@@ -18,7 +18,7 @@
 		  <%i+=1%>
 		<%end%>
   </div>
-  <%=f.submit%>
+  <%=f.submit :class=>"circle-corner"%>
 <%end%>
 <!--span id="myButton" data-confirm="删除后无法恢复，你确定删除吗?">Destroy</span>
 <div id="test_click" data-index="100" style="border:1px solid red;cursor: pointer;width: 100px;height:30px;text-align:center;">ClickMe</div>
