--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -16,10 +16,10 @@ a {
     color: #005584;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, label {
+/*body, h1, h2, h3, h4, h5, h6, p, label {
     font-family: Verdana,Geneva,sans-serif,sans-serif;
     text-align: left;
-}
+}*/
 
 h1 {
     color: #313533;
