--- a/app/views/admin/sections/edit.html.erb
+++ b/app/views/admin/sections/edit.html.erb
@@ -130,5 +130,7 @@ button, input, optgroup, select, textarea {
     text-shadow: 0 1px 0 #fff;
 }
 </style>
+<script type="text/javascript">
 
+</script>
 
