--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -1,3 +1,7 @@
+<%= javascript_include_tag "bootstrapvalidator/dist/js/bootstrapValidator.min?time=#{Time.now.to_i}"%>
+<%= javascript_include_tag "js_login/toggle_form?time=#{Time.now.to_i}" %>
+<%= stylesheet_link_tag "css_login/modal_login?time=#{Time.now.to_i}" %>
+
 <div class="slide-wrapper">
 <div class="slideshow-container">
   <div class="mySlides faded">
